--- a/flask/templates/register.html
+++ b/flask/templates/register.html
@@ -6,7 +6,7 @@
     <title>Registration</title>
 </head>
 <body>
-<form action="" method="post">
+<form action="/confirmation" method="post">
     <label> Name </label>
     <input type="text" name="Name">
     <label> City</label>
