--- a/flask/templates/register.html
+++ b/flask/templates/register.html
@@ -11,8 +11,8 @@
     <input type="text" name="Name">
     <label> City</label>
     <input type="text" name="City">
-    <label> Phone Number </label>
-    <input type="text" name="Phone Number">
+    <label> Phone </label>
+    <input type="text" name="Phone ">
     <input type="submit" value="Register">
 
 </form>
